force-app/main/default/objects/ProcessStepEvent__e/ProcessStepEvent__e.object-meta.xml
<CustomObject>
    <label>Process Step</label>
    <pluralLabel>Process Steps</pluralLabel>
</CustomObject>