force-app/main/default/objects/ProcessStepEvent__e/fields/documentId__c.field-meta.xml
<CustomField>
    <fullName>documentId__c</fullName>
    <description>The Id of the file that contains the XML or JSON to Process</description>
    <label>Document Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>