force-app/main/default/objects/ProcessStepEvent__e/fields/JsonString__c.field-meta.xml
<CustomField>
    <fullName>JsonString__c</fullName>
    <description>The JSON relevant to the Process Step</description>
    <label>JSON String</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>