force-app/main/default/objects/ProcessStepEvent__e/fields/ObjectType__c.field-meta.xml
<CustomField>
    <fullName>ObjectType__c</fullName>
    <description>The Type of Object of the Record from where the Event is Triggered</description>
    <label>Object Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>