force-app/main/default/objects/ProcessStepEvent__e/fields/ProcessActivity__c.field-meta.xml
<CustomField>
    <fullName>ProcessActivity__c</fullName>
    <description>The Process related Activity to Initiate</description>
    <label>Process Activity</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>