force-app/main/default/objects/ProcessStepEvent__e/fields/ProcessStage__c.field-meta.xml
<CustomField>
    <fullName>ProcessStage__c</fullName>
    <description>The Stage of the Process</description>
    <label>Process Stage</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>