force-app/main/default/objects/ProcessStepEvent__e/fields/recordId__c.field-meta.xml
<CustomField>
    <fullName>recordId__c</fullName>
    <description>The Id of the Record from where the Event is Triggered</description>
    <label>recordId</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>